<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/add_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/main_menu"
        android:textColor="@color/text_header"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/add_movie_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/add_movie_save"
        app:layout_constraintTop_toBottomOf="@id/add_movie_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="24dp">

            <!-- NAME -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_movie_name_et"
                style="@style/style_editable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Movie Name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_movie_name_lbl"
                style="@style/style_add_movie_lbl"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="@id/add_movie_name_et"
                app:layout_constraintStart_toStartOf="@id/add_movie_name_et"
                app:layout_constraintTop_toTopOf="@id/add_movie_name_et" />
            <!-- NAME -->

            <!-- RATING -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_movie_rating_et"
                style="@style/style_editable"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_movie_name_et"
                tools:text="7.8" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_movie_rating_lbl"
                style="@style/style_add_movie_lbl"
                android:text="@string/rating"
                app:layout_constraintEnd_toEndOf="@id/add_movie_rating_et"
                app:layout_constraintStart_toStartOf="@id/add_movie_rating_et"
                app:layout_constraintTop_toTopOf="@id/add_movie_rating_et" />
            <!-- RATING -->

            <!-- YEAR -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_movie_year_et"
                style="@style/style_editable"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_movie_rating_et"
                tools:text="1998" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_movie_year_lbl"
                style="@style/style_add_movie_lbl"
                android:text="@string/production_year"
                app:layout_constraintEnd_toEndOf="@id/add_movie_year_et"
                app:layout_constraintStart_toStartOf="@id/add_movie_year_et"
                app:layout_constraintTop_toTopOf="@id/add_movie_year_et" />
            <!-- YEAR -->

            <!-- URL -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/add_movie_url_et"
                style="@style/style_editable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_movie_year_et"
                tools:text="www.google.com" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_movie_url_lbl"
                style="@style/style_add_movie_lbl"
                android:text="@string/photo_url"
                app:layout_constraintEnd_toEndOf="@id/add_movie_url_et"
                app:layout_constraintStart_toStartOf="@id/add_movie_url_et"
                app:layout_constraintTop_toTopOf="@id/add_movie_url_et" />
            <!-- URL -->

            <!-- COUNTER TYPE -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_movie_counter_type_val"
                style="@style/style_editable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_movie_url_et"
                tools:text="Instant View Counter" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_movie_counter_type_lbl"
                style="@style/style_add_movie_lbl"
                android:text="@string/counter_type"
                app:layout_constraintEnd_toEndOf="@id/add_movie_counter_type_val"
                app:layout_constraintStart_toStartOf="@id/add_movie_counter_type_val"
                app:layout_constraintTop_toTopOf="@id/add_movie_counter_type_val" />

            <com.ewo.laddemo.ui.custom.CustomIv
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/baseline_arrow_drop_down_white_36"
                app:customColor="@color/text_item_val"
                app:layout_constraintBottom_toBottomOf="@id/add_movie_counter_type_val"
                app:layout_constraintEnd_toEndOf="@id/add_movie_counter_type_val"
                app:layout_constraintTop_toTopOf="@id/add_movie_counter_type_val" />

            <Spinner
                android:id="@+id/add_movie_counter_type_spn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/add_movie_counter_type_val"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_spinner" />
            <!-- COUNTER TYPE -->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/main_separator_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/circle"
        app:layout_constraintTop_toBottomOf="@id/add_movie_title" />

    <Button
        android:id="@+id/add_movie_save"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/baseline_save_white_36"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>