<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <!-- HEADER -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:padding="12dp"
        android:textColor="@color/text_header"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name Of Movie Name Of Movie" />
    <!-- HEADER -->

    <!-- PHOTO -->
    <com.ewo.laddemo.ui.custom.CustomIv
        android:id="@+id/detail_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="@color/bgWindow"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@id/detail_separator"
        app:layout_constraintTop_toBottomOf="@id/detail_name" />
    <!-- PHOTO -->

    <!-- COUNTER TYPE -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/detail_counter_increase_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="12dp"
        android:background="@drawable/baseline_add_circle_white_36"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_counter_type_lbl"
        style="@style/style_detail_lbl"
        android:layout_margin="12dp"
        android:text="@string/loan_view_counter_type"
        app:layout_constraintBottom_toTopOf="@id/detail_counter_increase_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_counter_type"
        style="@style/style_detail_val"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/detail_counter_type_lbl"
        app:layout_constraintEnd_toEndOf="@id/detail_counter_type_lbl"
        app:layout_constraintStart_toStartOf="@id/detail_counter_type_lbl"
        tools:text="INSTANT" />
    <!-- COUNTER TYPE -->

    <!-- DETAIL INFO -->
    <View
        android:id="@+id/detail_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@id/detail_counter_type" />

    <View
        android:id="@+id/detail_separator_ver_0"
        android:layout_width="1dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_separator" />

    <View
        android:id="@+id/detail_separator_ver_1"
        android:layout_width="1dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_separator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_total_lbl"
        style="@style/style_detail_lbl"
        android:text="@string/rating"
        app:layout_constraintBottom_toBottomOf="@id/detail_separator_ver_0"
        app:layout_constraintEnd_toStartOf="@id/detail_separator_ver_0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_total"
        style="@style/style_detail_val"
        app:layout_constraintBottom_toTopOf="@id/detail_total_lbl"
        app:layout_constraintEnd_toEndOf="@id/detail_total_lbl"
        app:layout_constraintStart_toStartOf="@id/detail_total_lbl"
        tools:text="8.5/10.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_paid_lbl"
        style="@style/style_detail_lbl"
        android:text="@string/year"
        app:layout_constraintBottom_toBottomOf="@id/detail_separator_ver_1"
        app:layout_constraintEnd_toStartOf="@id/detail_separator_ver_1"
        app:layout_constraintStart_toEndOf="@id/detail_separator_ver_0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_paid"
        style="@style/style_detail_val"
        app:layout_constraintBottom_toTopOf="@id/detail_paid_lbl"
        app:layout_constraintEnd_toEndOf="@id/detail_paid_lbl"
        app:layout_constraintStart_toStartOf="@id/detail_paid_lbl"
        tools:text="1998" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_viewed_lbl"
        style="@style/style_detail_lbl"
        android:text="@string/viewed"
        app:layout_constraintBottom_toBottomOf="@id/detail_separator_ver_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_separator_ver_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/detail_viewed"
        style="@style/style_detail_val"
        app:layout_constraintBottom_toTopOf="@id/detail_viewed_lbl"
        app:layout_constraintEnd_toEndOf="@id/detail_viewed_lbl"
        app:layout_constraintStart_toStartOf="@id/detail_viewed_lbl"
        tools:text="3945" />
    <!-- DETAIL INFO -->

    <!-- DELETE BUTTON -->
    <Button
        android:id="@+id/detail_delete_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="24dp"
        android:background="@drawable/baseline_delete_white_36"
        app:layout_constraintBottom_toBottomOf="@id/detail_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/detail_name" />
    <!-- DELETE BUTTON -->

</androidx.constraintlayout.widget.ConstraintLayout>